# sd_project

./: .gitignore  Cargo.toml  README.md  etcd_commands  test.py
src/: admin_cli.py  admin_portal.py  client_cli.py  client_portal.py  start_replica.py  utils.rs
src/admin/: controller.py  interface.py
src/admin/cli/: client.rs  main.rs
src/admin/portal/: main.rs
src/admin/server/: controller.rs  main.rs
src/client/: controller.py  interface.py
src/client/cli/: main.rs  task.rs
src/client/portal/: handlers.rs  main.rs
src/client/server/: controller.rs  main.rs
src/others/: cache.py  etcd.py  inputs.py  models.py  net.py  pubsub.py  request.py  response.py
src/replica/: config.py  model.py  net.py
src/utils/: config.rs  inputs.rs  models.rs  request.rs  response.rs
tmp/: INFO.txt
