[package]
name = "sd_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mosquitto-client = "0.1.5"

[build-dependencies]
pkg-config = "0.3.16"

#client portal binary
[[bin]]
    name = "client_portal"
    path = "src/client/server/main.rs"

# client cli binary
[[bin]]
    name = "client_cli"
    path = "src/client/cli/main.rs"


#admin portal binary
[[bin]]
    name = "admin_portal"
    path = "src/admin/server/main.rs"
#admin cli binary
[[bin]]
    name = "admin_cli"
    path = "src/admin/cli/main.rs"